--- a/FCT/CSS/banda.css
+++ b/FCT/CSS/banda.css
@@ -15,3 +15,37 @@
     
         width: 100%;
 }
+
+@media (max-width: 750px){
+
+    .titulo{
+      font-size: 25px;
+    }
+
+    .hora{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .time > .test{
+   
+        width: auto;
+    }
+    
+
+    .foot{
+        padding-bottom: 40%;
+    }
+
+    .test{
+        width: 100%;
+    }
+
+    .select{
+        margin-top: 30px;
+        padding: 12px;
+        width: 100%;
+    }
+    
+    
+}
