--- a/FCT/CSS/inicio.css
+++ b/FCT/CSS/inicio.css
@@ -8,6 +8,7 @@
     box-sizing: inherit;
     margin: 0px;
     padding: 0px;
+    outline: none !important;
   }
 
   html,body{
@@ -23,6 +24,10 @@
 .principal{
     background-image: linear-gradient(to bottom, #ffa2f0,#ffffff);
     margin-bottom: 80px;
+}
+
+#toogle{
+    display: none;
 }
 
 
@@ -185,3 +190,136 @@ button:active{
     transition: .2s;
 }
 
+.imagen{
+    margin-left: 5%;
+}
+
+
+@media (max-width: 1324px){
+
+    .foot{
+        padding-bottom: 5%;
+    }
+
+    .list-group{
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: flex-start;
+        z-index: 1;
+    }
+
+    .final{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .card-deck{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .list-group{
+        width: auto;
+        position: fixed;
+        right: -100%;
+        display: none;
+        border: solid 1px;
+        border-radius: 25px;
+        margin-top: 5%;
+    }
+    #toogle{
+        display: inline;
+        z-index: 1;
+        background-color: transparent;
+        border: none;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .list-group-item{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: 3%;
+    }
+
+    .barra{
+        display: flex;
+        justify-content: flex-end;
+    }
+
+     .card-img-top{
+         width: 100% !important;
+         
+    }
+
+    .swiper-container{
+        transition: .3s;
+    }
+
+    .card{
+        height: 100% !important;
+    }
+
+    .bot{
+        font-size: 15px;
+    }
+
+    .title{
+        font-size: 20px;
+    }
+
+    .imagen > img {
+        padding-right: 50%;
+        width: auto !important;
+        height: auto !important;
+    }
+
+    #error{
+        height: 220px !important;
+    }
+
+    .lado {
+        margin-left: 10%;
+    }
+
+  
+
+
+}
+
+@media (max-width: 570px){
+
+    .final{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .card-deck{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+     .card-img-top{
+         width: 100% !important;
+         
+    }
+
+    .card{
+        height: 100% !important;
+    }
+
+    .imagen > img, #error{
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    .card-img-top {
+        height: auto !important;
+    }
+
+    .foot{
+        padding-bottom: 25%;
+    }
+   
+}
