--- a/FCT/CSS/opciones.css
+++ b/FCT/CSS/opciones.css
@@ -18,5 +18,28 @@
 }
 
 .foot{
-    margin-top: 15%;
+    margin-top: 25%;
+}
+
+.foot{
+    padding-bottom: 20%;
+}
+
+@media (max-width: 550px){
+
+    .titulo{
+      font-size: 25px;
+    }
+
+    .foot{
+        padding-bottom: 40%;
+    }
+
+    .select{
+        margin-top: 30px;
+        padding: 12px;
+        width: 100%;
+    }
+    
+    
 }
